# sdl2-CANdata-client-server

./: README.md
sdl2-dataClient/: sdl2-dataClient.cpp  vcpkg.json
sdl2-dataServer/: CMakeLists.txt  sdl2-dataServer.cpp  sdl2-dataServer.h  vcpkg-configuration.json
